--- a/requirements.txt
+++ b/requirements.txt
@@ -18,4 +18,5 @@ redis~=3.5.3
 
 PyYAML~=5.4.1
 charmhelpers~=0.20.20
+pytest
 git+https://github.com/juju-solutions/resource-oci-image#egg=oci-image
